--- a/styles.css
+++ b/styles.css
@@ -63,8 +63,8 @@ h1 {
     margin: 10px;
     padding: 10px;
     padding-bottom: 0px;
-    font-size: 2em;
-    line-height: 35px;
+    font-size: 2.5em;
+    line-height: 1.2;
 }
 
 h2 {
@@ -87,7 +87,6 @@ h3 {
 .main-text {
     margin: 10px;
     padding: 10px;
-    padding-top: 0px;
     font-size: 1em;
     line-height: 20px;
     clear: both;
@@ -120,17 +119,35 @@ h3 {
 
 .count {
     line-height: 25px;
-    color: black;
-    font-size: 18px;
+    color: white;
+    font-size: 5em;
     font-family: 'menlo';
+    position: absolute;
+    z-index: 5;
+    top: 50%;
+    transform: translateY(-50%);
+    width: 100%;
+    text-align: center;
+    left: 0;
+    background-color: rgba(0, 0, 0, 0.65);
+    padding: .5em;
+    display: block;
+    box-sizing: border-box;
+    display: none;
+}
+
+.count.active {
+    display: block;
 }
 
 .square {
     width: 100%;
-    height: 250px;
     color: black;
     font-size: 18px;
     font-family: 'menlo';
+    margin-bottom: 1em;
+    text-align: center;
+    position: relative;
 }
 
 .linker {
@@ -144,7 +161,7 @@ h3 {
 }
 
 .icon {
-    max-width: 100%;
+    width: 100%;
 }
 
 
@@ -156,6 +173,7 @@ h3 {
         width: 32%;
         float: left;
         margin: 0 .5% 1em .5%;
+        height: 250px;
     }
     #calculator {
         max-width: 400px;
