--- a/styles.css
+++ b/styles.css
@@ -53,6 +53,13 @@ html, body {
     padding: 1em;
     font-family: 'menlo';
     background-color: #ccc;
+    margin-bottom: 2em;
+}
+
+#mathIt {
+    font-family: 'menlo';
+    font-size: 1.5em;
+    font-weight: bold;
 }
 
 input {
@@ -73,15 +80,20 @@ h2 {
     padding: 10px;
     padding-top: 0px;
     font-size: 1em;
-    line-height: 35px;
+    line-height: 1.5;
 }
 
 h3 {
     margin: 10px;
-    padding: 10px;
-    padding-top: 0px;
-    padding-bottom: 5px;
-    line-height: 20px;
+    font-size: 1.5em;
+    padding-top: 10px;
+    line-height: 1em;
+}
+
+figcaption {
+    font-size: 14px;
+    line-height: 1.3;
+    padding-bottom: 1.5em;
 }
 
 .main-text {
@@ -143,11 +155,12 @@ h3 {
 .square {
     width: 100%;
     color: black;
-    font-size: 18px;
+    font-size: 20px;
     font-family: 'menlo';
     margin-bottom: 1em;
     text-align: center;
     position: relative;
+    font-weight: bold;
 }
 
 .linker {
